--- a/.github/workflows/helm-docs.yaml
+++ b/.github/workflows/helm-docs.yaml
@@ -19,4 +19,4 @@ jobs:
         working-directory: './charts/${{ matrix.chart }}'
       - run: |
           git add -N .
-          git diff || (echo '::error::Please make sure that the README.md is up to date' && exit 1)
+          git diff --quiet || (echo '::error::Please make sure that the README.md is up to date' && exit 1)
