--- a/charts/monitoring-rules/templates/prometheusrule-minio.yaml
+++ b/charts/monitoring-rules/templates/prometheusrule-minio.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ include "monitoring-rules.fullname" . }}-minio
   labels:
     {{- include "monitoring-rules.labels" . | nindent 4 }}
-    {{ toYaml .Values.prometheusLabels }}
+    {{ toYaml .Values.prometheusLabels | nindent 4 }}
 spec:
   groups:
   - name: minio-rules
