change logging ns in filebeat podmonitor

--- a/charts/logging/values.yaml
+++ b/charts/logging/values.yaml
@@ -121,6 +121,9 @@ filebeat:
       port: 5066
   daemonSet:
     podTemplate:
+      metadata:
+        labels:
+          k8s-app: filebeat
       spec:
         serviceAccountName: filebeat
         automountServiceAccountToken: true
