--- a/charts/she-sso/templates/ingress-oauth2-proxy.yaml
+++ b/charts/she-sso/templates/ingress-oauth2-proxy.yaml
@@ -46,8 +46,8 @@ spec:
       http:
         paths:
           - path: {{ default "/oauth2" $host.path }}
-            {{- if and $host.pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
-            pathType: {{ $host.pathType }}
+            {{- if (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
+            pathType: {{ default "Prefix" $host.pathType }}
             {{- end }}
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
