Added missing argocd annotation

--- a/charts/she-sso/values.yaml
+++ b/charts/she-sso/values.yaml
@@ -47,6 +47,8 @@ oAuthProxy:
 argocd:
   enabled: true
   # namespace: argocd
+  annotations:
+    app.kubernetes.io/part-of: argocd
   config:
     cm:
       admin.enabled: "true"
