--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,8 +4,10 @@ repos:
     rev: v4.5.0
     hooks:
     -   id: check-yaml
+        exclude: ^charts/.*/templates/.*\.yaml
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
+    -   id: mixed-line-ending
   - repo: https://github.com/norwoodj/helm-docs
     rev:  v1.12.0
     hooks:
@@ -13,3 +15,7 @@ repos:
         args:
           - --chart-search-root=charts
           - --template-files=./README.md.gotmpl
+  - repo: https://github.com/gruntwork-io/pre-commit
+    rev: v0.1.23
+    hooks:
+      - id: helmlint
