--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,5 +25,7 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1
+        with:
+          skip_existing: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
