--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -141,7 +141,9 @@ prometheusOperator:
       storageSpec: {}
     thanosIngress:
       enabled: false
-    thanosExternalService:
+    thanosService:
+      enabled: true
+    thanosServiceExternal:
       enabled: false
   # defaultRules: {}
   source:
