--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -10,12 +10,14 @@ sealedSecrets:
   enabled: true
   source:
     repoURL: https://charts.bitnami.com/bitnami
-    targetRevision: 1.6.2
+    targetRevision: 2.0.0
     chart: sealed-secrets
     helm:
       parameters:
         - name: skipRecreate
           value: 'true'
+        - name: keyRenewPeriod
+          value: '0'
 
 postgresOperator:
   namespace: postgres-operator
