--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -365,11 +365,26 @@ taintController:
   source:
     repoURL: https://bagaluten.github.io/charts/
     chart: tainter
-    targetRevision: 0.1.3
-    # helm:
-    #   values: |
-    #     image:
-    #       tag: main
+    targetRevision: 0.1.4
+    helm:
+      values: |
+        config:
+          data: |
+            labelTaints:
+              - taint:
+                  key: dedicated
+                  value: database
+                  effect: NoSchedule
+                selector:
+                  key: node-role.kubernetes.io/database
+              - taint:
+                  key: dedicated
+                  value: minio
+                  effect: NoSchedule
+                selector:
+                  key: node-role.kubernetes.io/minio
+            ignoreLabel:
+              key: node-role.kubernetes.io/control-plane
 
 x509Exporter:
   namespace: monitoring
