--- a/charts/minio-mirror/Chart.yaml
+++ b/charts/minio-mirror/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: minio-mirror
 description: A Helm chart that provides a minio mirror service
 type: application
-version: "0.3.1"
-appVersion: "0.3.1"
+version: "0.3.2"
+appVersion: "RELEASE.2024-04-18T16-45-29Z"
