--- a/charts/monitoring-rules/templates/prometheusrule-minio-mirror.yaml
+++ b/charts/monitoring-rules/templates/prometheusrule-minio-mirror.yaml
@@ -12,7 +12,7 @@ spec:
     rules:
     {{- if not ( default false .Values.minioMirror.disabledRules.failedS3Ops ) }}
     - alert: MinioMirrorFailedS3Ops
-      expr: 'irate(mc_mirror_failed_s3ops[5m]) > 0'
+      expr: 'mc_mirror_failed_s3ops >= (mc_mirror_failed_s3ops offset 1m > 0)'
       for: 0m
       labels:
         severity: critical
