--- a/charts/monitoring-rules/Chart.yaml
+++ b/charts/monitoring-rules/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v2
 name: monitoring-rules
-description: A Helm chart for Kubernetes
+description: A curated set of prometheus alerting rules for Kubernetes.
+
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
@@ -13,9 +14,10 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 3.0.2
+version: 3.1.0
+
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "3.0.2"
+appVersion: "3.1.0"
