add new liveness probe for minio mirror

--- a/charts/minio-mirror/templates/deployment.yaml
+++ b/charts/minio-mirror/templates/deployment.yaml
@@ -75,6 +75,8 @@ spec:
               mountPath: {{ default "/etc/minio/credentials" $.Values.config.minioCredentials.existingSecret.volumeMount.mountPath }}
             - name: target-credentials
               mountPath: {{ default "/etc/target/credentials" $.Values.config.targetCredentials.existingSecret.volumeMount.mountPath }}
+            - name: liveness-prbe-script
+              mountPath: /opt/liveness-probe.sh
           {{- with $.Values.extraVolumeMounts }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
@@ -88,6 +90,9 @@ spec:
           secret:
             secretName: {{ .Values.config.targetCredentials.existingSecret.name }}
             defaultMode: 420
+        - name: liveness-probe-script
+          configMap:
+            name: {{ include "minio-mirror.fullname" . }}
       {{- with .Values.extraVolumes }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
