--- a/charts/minio-mirror/templates/deployment.yaml
+++ b/charts/minio-mirror/templates/deployment.yaml
@@ -75,7 +75,7 @@ spec:
               mountPath: {{ default "/etc/minio/credentials" $.Values.config.minioCredentials.existingSecret.volumeMount.mountPath }}
             - name: target-credentials
               mountPath: {{ default "/etc/target/credentials" $.Values.config.targetCredentials.existingSecret.volumeMount.mountPath }}
-            - name: liveness-prbe-script
+            - name: liveness-probe-script
               mountPath: /opt/liveness-probe.sh
           {{- with $.Values.extraVolumeMounts }}
             {{- toYaml . | nindent 12 }}
