--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,6 +23,10 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
+      - name: Add helm dependencies
+        run: |
+          helm repo add fluent https://fluent.github.io/helm-charts
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1
         env:
