--- a/charts/logging-opensearch/templates/indextemplate-container.yaml
+++ b/charts/logging-opensearch/templates/indextemplate-container.yaml
@@ -2,7 +2,7 @@
 apiVersion: opensearch.opster.io/v1
 kind: OpensearchIndexTemplate
 metadata:
-  name: {{ include "logging-opensearch.fullname" . }}-container
+  name: {{ include "logging-opensearch.name" . }}-container
   labels:
     {{- include "logging-opensearch.labels" . | nindent 4 }}
 spec:
