--- a/charts/logging-opensearch/templates/opensearch-cluster.yaml
+++ b/charts/logging-opensearch/templates/opensearch-cluster.yaml
@@ -2,7 +2,7 @@
 apiVersion: opensearch.opster.io/v1
 kind: OpenSearchCluster
 metadata:
-  name: {{ include "logging-opensearch.fullname" . }}
+  name: {{ include "logging-opensearch.name" . }}
   labels:
     {{- include "logging-opensearch.labels" . | nindent 4 }}
 spec:
