--- a/charts/logging-opensearch/templates/indextemplate-additional.yaml
+++ b/charts/logging-opensearch/templates/indextemplate-additional.yaml
@@ -6,5 +6,7 @@ metadata:
   labels:
     {{- include "logging-opensearch.labels" $ | nindent 4 }}
 spec:
-  {{- toYaml $template | nindent 2 }}
+  opensearchCluster:
+    name: {{ default ( include "logging-opensearch.opensearchName" $ ) ( dig "opensearchCluster" "name" "" $template ) }}
+  {{ toYaml $template | nindent 2 }}
 {{- end }}
