--- a/charts/logging-opensearch/templates/indextemplate-container.yaml
+++ b/charts/logging-opensearch/templates/indextemplate-container.yaml
@@ -7,10 +7,8 @@ metadata:
     {{- include "logging-opensearch.labels" . | nindent 4 }}
 spec:
   name: container
-  {{- with .Values.global.opensearchCluster }}
   opensearchCluster:
-  {{- toYaml . | nindent 4 }}
-  {{- end }}
+    name: {{- include "logging-opensearch.opensearchName" . }}
   indexPatterns:
     - "container-*"
   dataStream:
