--- a/charts/logging-opensearch/templates/opensearch-roles.yaml
+++ b/charts/logging-opensearch/templates/opensearch-roles.yaml
@@ -6,9 +6,8 @@ metadata:
   labels:
     {{- include "logging-opensearch.labels" $ | nindent 4 }}
 spec:
-  {{- range $key := ( list "opensearchCluster" ) }}
-  {{- toYaml ( default ( pick $.Values.global $key ) ( pick $role $key ) ) | nindent 2 }}
-  {{- end }}
+  opensearchCluster:
+    name: {{ default ( include "logging-opensearch.opensearchName" $ ) ( dig "opensearchCluster" "name" "" $role ) }}
   {{- with $role }}
   {{- toYaml . | nindent 2 }}
   {{- end }}
