Fixed opensearch cluster name generation in indextemplates

--- a/charts/logging-opensearch/templates/indextemplate-access.yaml
+++ b/charts/logging-opensearch/templates/indextemplate-access.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   name: access
   opensearchCluster:
-    name: {{- include "logging-opensearch.opensearchName" . }}
+    name: {{ include "logging-opensearch.opensearchName" . }}
   indexPatterns:
     - "access-*"
   dataStream:
