--- a/charts/logging-opensearch/templates/indextemplate-audit.yaml
+++ b/charts/logging-opensearch/templates/indextemplate-audit.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   name: audit
   opensearchCluster:
-    name: {{- include "logging-opensearch.opensearchName" . }}
+    name: {{ include "logging-opensearch.opensearchName" . }}
   indexPatterns:
     - "audit-*"
   dataStream:
