--- a/charts/logging-opensearch/templates/indextemplate-container.yaml
+++ b/charts/logging-opensearch/templates/indextemplate-container.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   name: container
   opensearchCluster:
-    name: {{- include "logging-opensearch.opensearchName" . }}
+    name: {{ include "logging-opensearch.opensearchName" . }}
   indexPatterns:
     - "container-*"
   dataStream:
