--- a/charts/logging-opensearch/templates/opensearch-ingress.yaml
+++ b/charts/logging-opensearch/templates/opensearch-ingress.yaml
@@ -1,6 +1,5 @@
 {{- if .Values.opensearch.ingress.enabled -}}
 {{- $fullName := include "logging-opensearch.fullname" . -}}
-{{- $svcPort := .Values.service.port -}}
 {{- if and .Values.opensearch.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.opensearch.ingress.annotations "kubernetes.io/ingress.class") }}
   {{- $_ := set .Values.opensearch.ingress.annotations "kubernetes.io/ingress.class" .Values.opensearch.ingress.className}}
@@ -49,12 +48,12 @@ spec:
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
-                name: {{ $fullName }}
+                name: {{ $fullName }}-dashboards
                 port:
-                  number: {{ $svcPort }}
+                  number: 5601
               {{- else }}
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
+              serviceName: {{ $fullName }}-dashboards
+              servicePort: 5601
               {{- end }}
           {{- end }}
     {{- end }}
