Added service override name

--- a/charts/logging-opensearch/templates/opensearch-ingress.yaml
+++ b/charts/logging-opensearch/templates/opensearch-ingress.yaml
@@ -48,11 +48,11 @@ spec:
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
-                name: {{ $name }}-dashboards
+                name: {{ default $name .Values.opensearch.service.overrideName }}-dashboards
                 port:
                   number: 5601
               {{- else }}
-              serviceName: {{ $name }}-dashboards
+              serviceName: {{ default $name .Values.opensearch.service.overrideName }}-dashboards
               servicePort: 5601
               {{- end }}
           {{- end }}
