Fixed opensearch roles and users

--- a/charts/logging-opensearch/templates/opensearch-roles.yaml
+++ b/charts/logging-opensearch/templates/opensearch-roles.yaml
@@ -2,7 +2,7 @@
 apiVersion: opensearch.opster.io/v1
 kind: OpensearchRole
 metadata:
-  name: {{ include "logging-opensearch.name" $ }}-{{ $role.name }}
+  name: {{ $role.name }}
   labels:
     {{- include "logging-opensearch.labels" $ | nindent 4 }}
 spec:
