--- a/charts/logging-opensearch/templates/opensearch-rolebindings.yaml
+++ b/charts/logging-opensearch/templates/opensearch-rolebindings.yaml
@@ -10,7 +10,7 @@
 apiVersion: opensearch.opster.io/v1
 kind: OpensearchUserRoleBinding
 metadata:
-  name: {{ include "logging-opensearch.name" $ }}-{{ $role.name }}
+  name: {{ $role.name }}
   labels:
     {{- include "logging-opensearch.labels" $ | nindent 4 }}
 spec:
